# CloudCompare

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  3DXSupport.cmake  BUILD.md  CCPConfig.cmake.in  CHANGELOG  CHANGELOG.md  CMakeExternalLibs.cmake  CMakeInclude.cmake  CMakeLists.txt  CMakePolicies.cmake  CMakeSetCompilerOptions.cmake  CMakeSettings.json  CONTRIBUTING.md  Dockerfile  Dockerfile2  E57Support.cmake  FEATURES_LIST.md  LiblasSupport.cmake  README  README.OSX  README.md  README.mdown  XIOTSupport.cmake  coding_rules.md  coding_rules.rtf  compilation_all_platforms_eng.txt  designing_a_new_qCC_plugin.md  license.txt  license_headers.txt  lol.sh  pixi.toml  readme_mxe.mdown  run_dev.sh
CC/: CGALSupport.cmake  CMakeLists.txt
CC/cmake/: CGALSupport.cmake
CC/doc/: CCLib_doxygen_file
CC/include/: AutoSegmentationTools.h  BoundingBox.h  CCConst.h  CCCoreLib.h  CCGeom.h  CCMiscTools.h  CCPlatform.h  CCShareable.h  CCToolbox.h  CCTypes.h  ChamferDistanceTransform.h  ChamferDistanceTransformSigned.h  ChunkedPointCloud.h  CloudCompareDll.h  CloudSamplingTools.h  ConjugateGradient.h  DebugProgressCallback.h  Delaunay2dMesh.h  DgmOctree.h  DgmOctreeReferenceCloud.h  DistanceComputationTools.h  ErrorFunction.h  FastMarching.h  FastMarchingForPropagation.h  Garbage.h  GenericChunkedArray.h  GenericCloud.h  GenericDistribution.h  GenericIndexedCloud.h  GenericIndexedCloudPersist.h  GenericIndexedMesh.h  GenericMesh.h  GenericOctree.h  GenericProgressCallback.h  GenericSensor.h  GenericTriangle.h  GeometricalAnalysisTools.h  Grid3D.h  GroundBasedLidarSensor.h  Jacobi.h  (+29 more)
CC/src/: AutoSegmentationTools.cpp  BoundingBox.cpp  CCMiscTools.cpp  CCShareable.cpp  ChamferDistanceTransform.cpp  ChamferDistanceTransformSigned.cpp  Chi2Helper.h  ChunkedPointCloud.cpp  CloudSamplingTools.cpp  DebugProgressCallback.cpp  Delaunay2dMesh.cpp  DgmOctree.cpp  DgmOctreeReferenceCloud.cpp  DistanceComputationTools.cpp  ErrorFunction.cpp  FastMarching.cpp  FastMarchingForPropagation.cpp  GeometricalAnalysisTools.cpp  GroundBasedLidarSensor.cpp  KdTree.cpp  LocalModel.cpp  ManualSegmentationTools.cpp  MeshSamplingTools.cpp  Neighbourhood.cpp  NormalDistribution.cpp  NormalizedProgress.cpp  PointCloud.cpp  PointProjectionTools.cpp  Polyline.cpp  ReferenceCloud.cpp  RegistrationTools.cpp  SaitoSquaredDistanceTransform.cpp  ScalarField.cpp  ScalarFieldTools.cpp  SimpleCloud.cpp  SimpleMesh.cpp  StatisticalTestingTools.cpp  TrueKdTree.cpp  WeibullDistribution.cpp
CC/triangle/: CMakeLists.txt  triangle.cpp  triangle.h
CCPAPI/: CMakeLists.txt  FindPYQTSIP.cmake  ScalarField.sip  TODO_list.md  ccPApi.cpp  ccPApi.h  ccPApi.sip  ccPointCloud.sip  ccTrace.h  cloudCompare.i  cloudCompare.sip  gendata.py.in  test.py  test2.py  test3.py
CCPAPI/PAPI/: CMakeLists.txt  ccPApi.cpp  ccPApi.h  ccTrace.h
CCPAPI/cmake/: FindPYQTSIP.cmake
CCPAPI/sip/: CMakeLists.txt  ScalarField.sip  ccPApi.sip  ccPointCloud.sip  cloudCompare.sip
CCPAPI/tests/: CMakeLists.txt  execInstallTest.bat.in  execInstallTest.sh.in  execTest.bat.in  execTest.sh.in  gendata.py.in  test.py  test001.py  test002.py  test003.py  test1.py  test2.py  test3.py
ccViewer/: CMakeIncludeQCCFiles.cmake  CMakeLists.txt  ccViewerApplication.cpp  ccViewerApplication.h  ccviewer.cpp  ccviewer.h  ccviewerlog.h  main.cpp
ccViewer/Mac/: CMakeLists.txt  ccViewer.plist  cc_viewer_icon.icns
ccViewer/bin_other/: license.txt  start.bat
ccViewer/ui_templates/: ccviewer.ui  ccviewerAbout.ui
contrib/dxflib/: CMakeLists.txt  readme.txt
contrib/dxflib-3.17.0/: CMakeLists.txt
contrib/dxflib-3.3.4/: CMakeLists.txt  dxflib.pro
contrib/shapelib-1.3.0/: CMakeLists.txt  shpopen.c
contrib/xiot-0.9.0-src.patched/: CMakeLists.txt  INSTALL  README  doxy.config.in
libs/BlockDBaseIO/: BlockDBaseIO.cpp  BlockDBaseIO.h  CMakeLists.txt  Exif.cpp  Exif.h  LObject.cpp  LObject.h  LasPrjIO.cpp  LasPrjIO.h  LxXML.cpp  LxXML.h  Markup.cpp  Markup.h  PrjInfo.h  PrjLog.hpp  StFileOperator.hpp
libs/CCAppCommon/: CMakeLists.txt
libs/CCFbo/: CMakeLists.txt
libs/CCPluginAPI/: CMakeLists.txt
libs/Glew/: CMakeLists.txt  Makefile
libs/qCC_db/: CMakeLists.txt  StBlock.cpp  StBlock.h  StBlockGroup.cpp  StBlockGroup.h  StBuilding.cpp  StBuilding.h  StFootPrint.cpp  StFootPrint.h  StFootPrintGroup.cpp  StFootPrintGroup.h  StModel.cpp  StModel.h  StPrimGroup.cpp  StPrimGroup.h  cc2DLabel.cpp  cc2DLabel.h  cc2DViewportLabel.cpp  cc2DViewportLabel.h  cc2DViewportObject.cpp  cc2DViewportObject.h  ccAdvancedTypes.cpp  ccAdvancedTypes.h  ccArray.h  ccAtomicBool.h  ccBBox.cpp  ccBBox.h  ccBasicTypes.h  ccBox.cpp  ccBox.h  ccCalibratedImage.cpp  ccCalibratedImage.h  ccCameraSensor.cpp  ccCameraSensor.h  ccChunkedArray.h  ccClipBox.cpp  ccClipBox.h  ccColorRampShader.cpp  ccColorRampShader.h  ccColorScale.cpp  (+131 more)
libs/qCC_glWindow/: CMakeLists.txt  ccGLRenderingThread.cpp  ccGLRenderingThread.h  (+9 more)
plugins/: CMakeLists.txt  CMakePluginTpl.cmake  CloudCompare - Shortcut.lnk  ccCommandLineInterface.h  ccDefaultPluginInterface.cpp  ccDefaultPluginInterface.h  ccGLFilterPluginInterface.h  ccGLPluginInterface.h  ccIOFilterPluginInterface.h  ccIOPluginInterface.h  ccMainAppInterface.h  ccPluginInfo.h  ccPluginInterface.h  ccStdPluginInterface.cpp  ccStdPluginInterface.h
qCC/: BlockDBase.cpp  BlockDBase.h  CMakeLists.txt  TODO.txt  bdr2.5DimEditor.cpp  bdr2.5DimEditor.h  bdr3D4EMDlg.cpp  bdr3D4EMDlg.h  bdrCameraParaDlg.cpp  bdrCameraParaDlg.h  bdrClassDisplayDlg.cpp  bdrClassDisplayDlg.h  bdrClassSettingDlg.cpp  bdrClassSettingDlg.h  bdrDeductionDlg.cpp  bdrDeductionDlg.h  bdrFacetFilterDlg.cpp  bdrFacetFilterDlg.h  bdrImageEditorPanel.cpp  bdrImageEditorPanel.h  bdrLasTilesDlg.cpp  bdrLasTilesDlg.h  bdrLine3DppDlg.cpp  bdrLine3DppDlg.h  bdrPGConnDlg.cpp  bdrPGConnDlg.h  bdrPlaneEditorDlg.cpp  bdrPlaneEditorDlg.h  bdrPlaneSegDlg.cpp  bdrPlaneSegDlg.h  bdrPolyFitDlg.cpp  bdrPolyFitDlg.h  bdrPosImportDlg.cpp  bdrPosImportDlg.h  bdrProjectDlg.cpp  bdrProjectDlg.h  bdrSettingBDSegDlg.cpp  bdrSettingBDSegDlg.h  bdrSettingGrdFilterDlg.cpp  bdrSettingGrdFilterDlg.h  (+269 more)
(+3307 files in other folders)
